# fishbot

autopatrol_interfaces/: CMakeLists.txt  package.xml
autopatrol_robot/: package.xml  setup.py
autopatrol_robot/autopatrol_robot/: patrol_node.py
fishbot_application/: package.xml  setup.py
fishbot_description/: package.xml
fishbot_description/config/: display_robot_model.rviz  fishbot_ros2_controller.yaml  slam_toolbox_params.yaml
fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
fishbot_description/urdf/: first_robot.gv  first_robot.urdf  first_robot.urdf.xacro
fishbot_description/urdf/fishbot/: base.urdf.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
fishbot_description/urdf/fishbot/plugins/: gazebo_sensor_plugin.xacro
fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
fishbot_description/world/: custom_room.world
fishbot_description/world/room/: model.config  model.sdf
fishbot_navigation2/: CMakeLists.txt  package.xml
fishbot_navigation2/config/: nav2_params.yaml
fishbot_navigation2/launch/: navigation2.launch.py
fishbot_navigation2/maps/: room.pgm  room.yaml
